# arcus-memcached

./: .gitignore  .travis.yml  AUTHORS  CONTRIBUTING.md  COPYING  ChangeLog  ChangeLog-memcached  Dockerfile  HACKING  Makefile.am  Makefile.docker  PATENTS  README.md  _run_memcached_solo.sh  arcus_hb.c  arcus_hb.h  arcus_zk.c  arcus_zk.h  ascii_scrub.c  assoc.c  assoc.h  basic_engine_testsuite.c  cache.c  cluster_config.c  cluster_config.h  cmd_in_second.c  cmd_in_second.h  cmdlog.c  cmdlog.h  config_parser.c  config_static.h  configure.ac  default_engine.c  default_engine.h  engine_loader.c  engine_testapp.c  example_protocol.c  hash.c  hash.h  isasl.c  (+43 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature-refactoring-request.md
.github/workflows/: CI.yml
config/: Doxyfile-api.in  Doxyfile.in  autorun.sh  version.pl
devtools/: clean-whitespace.pl  maketags.sh
doc/: ap01-arcus-telnet-interface.md  arcus-ascii-protocol.md  arcus-basic-concept.md  arcus-collection-concept.md  arcus-item-attribute.md  arcus-telnet-interface.md  ch00-arcus-ascii-protocol.md  ch01-arcus-basic-concept.md  ch02-collection-items.md  ch03-item-attributes.md  ch04-command-key-value.md  ch05-command-list-collection.md  ch06-command-set-collection.md  ch07-command-map-collection.md  ch08-command-btree-collection.md  ch09-command-pipelining.md  ch10-command-item-attribute.md  ch11-command-administration.md  ch11-command-scan.md  ch12-command-administration.md  command-administration.md  command-btree-collection.md  command-item-attribute.md  command-key-value.md  command-list-collection.md  command-map-collection.md  command-pipelining.md  command-set-collection.md  compilation_faq.md  engine-interface.xml  protocol.txt
docs/: install.md
docs/administration/: commandline_args.md  sasl.md  userlog.md
docs/ascii-protocol/: README.md  ch01-arcus-basic-concept.md  ch02-collection-items.md  ch03-item-attributes.md  ch04-command-key-value.md  ch05-command-list-collection.md  ch06-command-set-collection.md  ch07-command-map-collection.md  ch08-command-btree-collection.md  ch09-command-pipelining.md  ch10-command-item-attribute.md  ch11-command-scan.md  ch12-command-administration.md  ch12-command-sasl.md  ch13-command-administration.md  ch99-appendix.md
documentation/: README.md  SUMMARY.md  collection-items.md  item-attributes.md
documentation/ascii-protocol/: 00-arcus-ascii-protocol.md  01-key-value.md  02-list-collection.md  03-set-collection.md  04-map-collection.md  05-btree-collection.md  06-pipelining.md  07-item-attribute.md  08-scan.md  09-administration.md  appendix.md
documentation/manuals/: commandline_arguments.md  compilation_faq.md
engines/COMMON/: mblock_allocator.c  mblock_allocator.h
engines/default/: assoc.c  assoc.h  checkpoint.c  checkpoint.h  chkpt_snapshot.c  chkpt_snapshot.h  cmdlogbuf.c  cmdlogbuf.h  cmdlogfile.c  cmdlogfile.h  cmdlogmgr.c  cmdlogmgr.h  cmdlogrec.c  cmdlogrec.h  coll_btree.c  coll_btree.h  coll_list.c  coll_list.h  coll_map.c  coll_map.h  coll_set.c  coll_set.h  default_engine.c  default_engine.conf  default_engine.h  item_base.c  item_base.h  item_clog.c  item_clog.h  item_scan_old.c  item_scan_old.h  items.c  items.h  lrec.c  lrec.h  mc_snapshot.c  mc_snapshot.h  mem_pool.c  mem_pool.h  prefix.c  (+5 more)
engines/demo/: demo_engine.c  demo_engine.conf  demo_engine.h  dm_assoc.c  dm_assoc.h  dm_items.c  dm_items.h
include/memcached/: config_parser.h  engine.h  engine_common.h  extension.h  protocol_binary.h  server_api.h  types.h  util.h  vbucket.h
rfc1321/: global.h  md5.h  md5c.c
scripts/: install.sh  memcached-init  memcached-tool  memcached.conf  memcached.sysv  start-memcached
squall/: Makefile.am  configure.ac  sq_assoc.c  sq_assoc.h  sq_buffer.c  sq_buffer.h  sq_disk.c  sq_disk.h  sq_items.c  sq_items.h  sq_log.c  sq_log.h  sq_lrec.c  sq_lrec.h  sq_page.c  sq_page.h  sq_prefix.c  sq_prefix.h  sq_tran.c  sq_tran.h  sq_types.h  squall_config.h  squall_engine.c  squall_engine.conf  squall_engine.h
t/: 00-startup.t  64bit.t  arcus_ping_test.t  ascii_ext_protocol.t  binary-get.t  binary-sasl.t.in  binary.t  binary_crash.t  bogus-commands.t  bulk.t  cas.t  cmd_extensions.t  coll_bkeymismatch_test.t  coll_bkeyoor_test.t  coll_bop_attr_min_max_bkey.t  coll_bop_count.t  coll_bop_delete.t  coll_bop_eflag.t  coll_bop_get.t  coll_bop_incrdecr.t  coll_bop_insert.t  coll_bop_insert_getrim.t  coll_bop_large_tree.bt  coll_bop_large_tree.t  coll_bop_maxbkeyrange.t  coll_bop_mget_1.t  coll_bop_mget_2.t  coll_bop_position_test.bt  coll_bop_position_test.t  coll_bop_random_insert.bt  coll_bop_smget_1.t  coll_bop_smget_2.t  coll_bop_smget_3.t  coll_bop_smget_4.t  coll_bop_smget_5.t  coll_bop_smget_bkey_byte.t  coll_bop_smget_bkey_uint.t  coll_bop_smget_issues.t  coll_bop_smget_many_btrees.bt  coll_bop_smget_test.bt  (+102 more)
t/etc/: eager_item_invalidation.pl  large_btree_test.pl  stress-workload-change.pl  too_many_eviction_big_work.pl  too_many_eviction_get_work.pl  too_many_eviction_issue.pl  too_many_eviction_l_work.pl  too_many_eviction_m_work.pl  too_many_eviction_s_fast.pl  too_many_eviction_s_slow.pl  too_many_eviction_s_work.pl  too_many_eviction_set_work.pl  too_many_eviction_w_load.pl  too_many_eviction_w_work.pl
t/lib/: MemcachedTest.pm
t/squall/: squall_bogus-commands.t  squall_cas.t  squall_dash-M.t  squall_flags.t  squall_getset.t  squall_incrdecr.t  squall_issue_108.t  squall_issue_152.t  squall_issue_3.t  squall_issue_61.t  squall_issue_68.t  squall_issue_70.t  squall_issue_arcus_151.t  squall_multiversioning.t  squall_prefix.t  squall_readable_expiretime.t  squall_stress.t  squall_stress_1.pl  squall_stress_2.pl  squall_stress_getonly.pl  squall_udp.t
t/tlist/: engine_default_b.txt  engine_default_s.txt
win32/: config.sh
